--- a/templates/rezzed/slides.html
+++ b/templates/rezzed/slides.html
@@ -41,51 +41,52 @@
 		h1, h2, h3, h4, h5, h6 { margin: 0px; }
 		h1 {
 			font-family: 'NB Grotesk', sans-serif;
-			font-size: 85px; line-height: 85px;
+			font-size: 120px; line-height: 100px;
 			color: #ff57c0;
 			text-transform: uppercase;
-			letter-spacing: -.05em;
-			max-width: 600px;
+			/*letter-spacing: -.05em;*/
+			max-width: 650px;
+			margin-left: -7px;
 		}
 		h2, h4, h6 {
 			font-family: 'NB Grotesk', sans-serif;
-			font-size: 40px; line-height: 40px;
+			font-size: 36px; line-height: 36px;
 			color: white;
 			text-transform: uppercase;
 		}
 		h3, h5 {
 			font-family: Helvetica, sans-serif;
-			font-size: 30px; line-height: 36px;
+			font-size: 26px; line-height: 32px;
 			font-weight: 300;
 			color: white;
 		}
 		ul {
 			list-style: none;
-			margin: 0px; padding: 0px;
+			margin: 0; padding: 0;
 		}
 		.corner {
 			position: absolute;
 			height: 100%;
 			width: 100%;
 			top: 0px; left: 0px;
-			padding: 50px;
+			padding: 50px 75px;
 		}
-		.corner ul {
-			position: absolute;
-			left: 277px; top: 50px;
+		.corner h3 {
+			line-height: 26px;
 		}
-		.corner h1.heading {
-			margin-top: 30px;
-		}
-		.corner h1.countdown {
+		.corner h2.countdown {
 			color: white;
 			text-transform: initial;
+			font-size: 70px;
+			line-height: 60px;
+			margin-bottom: 3px;
 		}
-		.corner h2 {
+		/*.corner h2 {
 			margin-bottom: 10px;
-		}
+		}*/
 		.logo {
-			width: 177px; height: 231px;
+			width: 379px;
+			/*height: 231px;*/
 		}
 		.schedule {
 			width: 1920px; height: 1080px;
@@ -95,7 +96,7 @@
 		.schedule-item {
 			width: 600px; max-height: 700px;
 			position: absolute;
-			top: 350px;
+			top: 340px;
 			-webkit-transform-origin: center 350px;
 			-webkit-transition: -webkit-transform 1s;
 			color: white;
@@ -103,13 +104,15 @@
 		}
 		.schedule-item .image {
 			width: 600px; height: 300px;
+			background-position: center;
 			background-size: cover;
 			margin: 0 auto;
 		}
 		.schedule-item .headings {
 			background: #360c4e;
-			-webkit-transition: background .25s;
-			padding: 20px;
+			-webkit-transition: all .25s;
+			padding: 30px;
+			border-bottom: 3px solid #ff57c0;
 		}
 		.schedule-item span { color: #360c4e; }
 		.schedule-item h6 {
@@ -127,6 +130,7 @@
 		}
 		.schedule-item.small .headings {
 			background: transparent;
+			border-bottom: none;
 		}
 		.next-image	 {
 			position: absolute;
@@ -168,18 +172,27 @@
 			bottom: 50px; left: 50px;
 			overflow: hidden;
 		}
+		.next-text h2 {
+			font-size: 40px; line-height: 40px;
+		}
+		h2.next-heading {
+			margin-bottom: 5px;
+		}
 		.lower-left-third h2,
 		.lower-left-third h3 {
 			position: relative;
 			left: 0;
-			padding: 40px;
+			padding: 40px;;
 		}
-		.lower-left-third h2 {
+		.lower-left-third h2,
+		.lower-right-third h4 {
 			background: #360c4e;
 			color: #ff57c0;
 		}
+		.lower-right-third h2,
 		.lower-left-third h3 {
 			background: #503575;
+			color: white;
 		}
 		.lower-right-third {
 			max-width: 1820px;
@@ -196,12 +209,11 @@
 			display: inline-block;
 		}
 		.lower-right-third h2 {
-			background: #503575;
 			-webkit-transform: translateY(0);
 		}
 		.lower-right-third h4 {
-			color: #ff57c0;
-			background: #360c4e;
+			/*color: #ff57c0;*/
+			/*background: #360c4e;*/
 			-webkit-transform: translateY(0);
 		}
 	</style>
@@ -242,15 +254,16 @@
 	</div>
 
 	<div class="corner">
-		<img class="logo" src="img/EGX_REZZED_WHITE.png" />
+		<img class="logo" src="img/EGX_REZZED_LS_WHITE.png" />
+		<h1 class="heading"></h1>
+		<h2 class="countdown"></h2>
 		<ul>
 			<li><h2>#EGX @EGX</h2></li>
+			 <!-- @EGX</h2></li> -->
 			<li><h3>facebook.com/egx</h3></li>
-			<li><h3>youtube.com/egx</h3></li>
-			<li><h3>egx.net/egx</h3></li>
+			<!-- <li><h3>youtube.com/egx</h3></li> -->
+			<li><h3>egx.net</h3></li>
 		</ul>
-		<h1 class="heading"></h1>
-		<h1 class="countdown"></h1>
 	</div>
 </main>
 
@@ -292,6 +305,7 @@
 	}
 
 	function upNext() {
+		stopAllTimeouts();
 		hideSchedule();
 		showOverlay('Up next');
 		startCountdown();
@@ -311,6 +325,7 @@
 	}
 
 	function schedule(hold) {
+		stopAllTimeouts();
 		hideNextImage();
 		hideNextText();
 		stopCountdown();
@@ -677,10 +692,10 @@
 	function shrinkScheduleItem(item) {
 		item.addClass('small');
 		item.children('h6').animate({
-			marginLeft: '20px',
+			marginLeft: '30px',
 		});
 		item.children('.image').animate({
-			width: '560px',
+			width: '540px',
 		});
 	}
 
@@ -742,7 +757,7 @@
 				var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
 				var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
 				var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-				return hours ? hours + 'h ' : '' + minutes + 'm ' + seconds + 's';
+				return (hours ? hours + 'h ' : '') + minutes + 'm ' + seconds + 's';
 			}
 		}
 		else return '';
