--- a/templates/rezzed/slides.html
+++ b/templates/rezzed/slides.html
@@ -289,7 +289,7 @@
 
 	function loadSchedule(json) {
 		$.getJSON(json, function(data) {
-			console.log(data);
+			// console.log(data);
 			sessions = data;
 			// $.each(data, function(key, val) {});
 		});
@@ -313,11 +313,12 @@
 		is_intermission = true;
 	}
 
-	function upNext() {
+	function upNext(no_countdown) {
 		stopAllTimeouts();
 		hideSchedule();
 		showOverlay('Up next');
-		startCountdown();
+		if (no_countdown) stopCountdown();
+		else startCountdown();
 		showBackground();
 		showNext();
 	}
