--- a/templates/rezzed/slides.html
+++ b/templates/rezzed/slides.html
@@ -313,7 +313,8 @@
 	}
 
 	// testing
-	loadSchedule('../../schedule/rezzed-2017.json');
+	// loadSchedule('../../schedule/rezzed-2017.json');
+	loadSchedule('../../schedule/schedule.json');
 	// upNext();
 	// upNextImageOut()
 	// schedule();
