--- a/templates/rezzed/slides.html
+++ b/templates/rezzed/slides.html
@@ -315,6 +315,7 @@
 	// testing
 	// loadSchedule('../../schedule/rezzed-2017.json');
 	loadSchedule('../../schedule/schedule.json');
+	setDay('Friday');
 	// upNext();
 	// upNextImageOut()
 	// schedule();
