Reenable sessions var

--- a/templates/rezzed/slides.html
+++ b/templates/rezzed/slides.html
@@ -326,7 +326,7 @@
 		'lower_left': animLowerLeft(),
 		'lower_right': animLowerRight(),
 	};
-	// var sessions = [];
+	var sessions = [];
 	var schedule_timer = null, schedule_hold = false, is_intermission = false, countdown_timer = null;
 
 	function loadSchedule(json) {
