Clear countdown on end of day

--- a/templates/rezzed/slides.html
+++ b/templates/rezzed/slides.html
@@ -439,6 +439,7 @@
 	function endOfDay() {
 		showOverlay("That's all for now");
 		showBackground();
+		stopCountdown();
 		$('.central-text').show();
 	}
 
