Hide countdown on end of day

--- a/templates/rezzed/slides.html
+++ b/templates/rezzed/slides.html
@@ -440,6 +440,7 @@
 		showOverlay("That's all for now");
 		showBackground();
 		stopCountdown();
+		$('.countdown').hide();
 		$('.central-text').show();
 	}
 
