Test schedule frame drop fix

--- a/templates/rezzed/slides.html
+++ b/templates/rezzed/slides.html
@@ -338,6 +338,7 @@
 
 	// testing
 	// loadSchedule('../../schedule/rezzed-2017.json');
+	makeSchedule();
 	// setDay('Friday');
 	// upNext();
 	// upNextImageOut()
